style.css
*{
    font-family: 'roboto';
}

header{

    background-color: #1F2937;
    padding: 0 250px;
}

h1{
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8; 
    margin-bottom: 0;
}

h2{
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    text-align: center;
}

button{

    background-color: #3882F6;
    font-size: 18px;
    border-radius: 10px;
    width: 125px;
    height: 40px;
    color: #F9FAF8;
    font-weight: 800;
    border: none;
}

.header-topbar{

    display:flex;
    align-content: center;
    justify-content: space-between;

}

.header-logo{
    font-size: 28px;
    font-weight:bold;
    color: #F9FAF8;
    margin: 20px auto 20px 0;
}

.header-link{
    margin: 20px 0 20px 50px; 
}

.secondary-text{
    font-size: 18px;
    color: #E5E7EB;
}

.header-content{

    display:flex;
    flex-wrap: nowrap;
    padding-bottom: 150px;
}
.header-content .left{
    max-width:50%;
    margin-right:50px;
}

.header-content .right{
    display:flex;
    justify-content:center;
    align-items: center;
    min-width:50%;
    background-color: grey;
}
.left .secondary-text{
    margin-top: 0;
}

.second-section{
    margin: 50px 0;
}

.second-section .content{
    display: flex;
    justify-content:space-between;
    margin: 0 320px;
}

.second-section .content .element-container{
    width: 150px;
}

.illustration{
    width: 150px;
    height: 150px;
    border-style: solid; 
    border-radius: 18px; 
    border-color: #3882F6;  
}

.illustration-text{
    text-align: center; 
    color: #1F2937;
}

.third-section{ 
    background-color: #E5E7EB;
}

.third-section .wrapper{
    padding: 150px 0 80px 0;
    margin:0 340px;
}

.quote{
    font-size: 36px;
    font-style: italic;
    font-weight: 300; 
    color: #1F2937;
    margin-bottom:0 ;
}

.signature{
    font-size:25px;
    font-weight: 800;
    text-align: right;
    margin-top: 0;
}

